possible fix for white bottom padding on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -420,7 +420,7 @@
 	}
 }
 
-.particles_ctn {
-	width: 100%;
-	height: 100%;
-}
+// .particles_ctn {
+// 	width: 100%;
+// 	height: 100vh;
+// }
